# FIXTranslator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile
docs/integrations/: AWS.md  Datadog.md  Splunk.md
fixparser/: exporters.py  main.py  parser.py
fixparser/dicts/: custom.xml
splunk_ta/: modular_input.py
tests/: test_api.py  test_batch_parse.py  test_dict_upload_and_parse.py  test_export_event_enabled.py  test_parser_edgecases.py
